--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@fontsource/holtwood-one-sc": "^5.0.19",
+    "@fontsource/lato": "^5.0.21",
     "framer-motion": "^11.2.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
@@ -32,4 +35,3 @@
     "vite": "^5.2.0"
   }
 }
-
